--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,6 +22,10 @@
     <title>Kanban</title>
   </head>
   <body style="height: 100vmin">
+    <audio id='audio' >
+      <source src="./musicMetroid.mp3" type="audio/mp3" />
+      Your browser does not support the audio element.
+      </audio>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div style="height: 100%" id="root"></div>
     <!--
